# pywordnft

./: .gitignore  README.md  genwordnft.py  imgdata.json  pyproject.toml
pywordnft/: __init__.py  genimage.py  loadfonts.py  params.py
src/: __init__.py  genimage.py  loadfonts.py
