[tool.poetry]
name = "pywordnft"
version = "0.1.0"
description = "Gen images from JSON metadat"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "9.2.0"
click = "^8.1.3"

[tool.poetry.scripts]
genimagesfromjson = "bin.genwordnft:drawimagesfromjson"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
